# aoc2025

./: main.py  pyproject.toml  run1.prof  run2.prof  run3.prof  run4.prof
2024/day1/: solution.py
2024/day10/: solution.py
day1/: dial.txt  dial2.txt  sample2.txt  solution.py
day10/: Untitled-1.ipynb  reddit_solution.py
day11/: Untitled-1.ipynb
day11/mojo-solution/: life  life.mojo  pixi.toml  solution.mojo  solution2.mojo  solution3.mojo  solution4.mojo  solution5.mojo
day12/: input_p1  input_p2  solution.py
day2/: input1.txt  sample1.txt  solution.py
day3/: solution.py
day4/: solution.py
day5/: sample.txt  solution.py
day6/: solution.py
day7/: solution.py
day8/: solution.py
day9/: Interactive-1.ipynb  Untitled-1.ipynb  solution.py
