[project]
name = "adventofcode2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aocutils",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "ortools>=9.14.6206",
    "scipy>=1.16.3",
]

[tool.uv.workspace]
members = [
    "aoc-utils",
]

[tool.uv.sources]
aocutils = { path = "../aocutils" }
